# PNGconverter

./: CMakeLists.txt  README.md  example_input.txt
inc/: Converter.hpp  libraries.hpp  pngUtilities.hpp  pngUtils.hpp
src/: Converter.cpp  main.cpp  pngUtilities.cpp  pngUtils.cpp
